crates/math-core-cli/tests/snapshots/cli__formula_block.snap
---
source: crates/math-core-cli/tests/cli.rs
info:
  program: mathcore
  args:
    - "--formula"
    - x^2
    - "--block"
---
success: true
exit_code: 0
----- stdout -----
<math display="block"><msup><mi>x</mi><mn>2</mn></msup></math>

----- stderr -----
