crates/math-core-cli/tests/snapshots/cli__formula_error_report.snap
---
source: crates/math-core-cli/tests/cli.rs
info:
  program: mathcore
  args:
    - "--formula"
    - "\\frac"
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
Error: Expected argument but reached end of input.
   ╭─[ <input>:1:6 ]
   │
 1 │ \frac
   │      │ 
   │      ╰─ expected an argument here
───╯
