crates/math-core-cli/tests/snapshots/cli__formula_from_stdin.snap
---
source: crates/math-core-cli/tests/cli.rs
info:
  program: mathcore
  args: []
  stdin: a + b
---
success: true
exit_code: 0
----- stdout -----
<math><mi>a</mi><mo>+</mo><mi>b</mi></math>

----- stderr -----
