crates/math-core-cli/tests/snapshots/cli__forward_reference_resolves.snap
---
source: crates/math-core-cli/tests/cli.rs
info:
  program: mathcore
  args:
    - "-"
  stdin: "<p>See $\\eqref{eq:a}$.</p>\n<p>$$\\begin{align} x = 1 \\label{eq:a}\\end{align}$$</p>\n"
---
success: true
exit_code: 0
----- stdout -----
<p>See <math><mtext><a href="#eq:a">(1)</a></mtext></math>.</p>
<p><math display="block"><mtable displaystyle="true" scriptlevel="0" style="width: 100%"><mtr><mtd style="width: 50%"></mtd><mtd style="text-align: right;justify-items: end;padding-right: 0;"><mi>x</mi><mo>=</mo><mn>1</mn></mtd><mtd style="width: 50%;text-align: right;justify-items: end;" id="eq:a"><mtext>(1)</mtext></mtd></mtr></mtable></math></p>


----- stderr -----
