crates/math-core-cli/tests/snapshots/cli__latex_error_aborts_with_report.snap
---
source: crates/math-core-cli/tests/cli.rs
info:
  program: mathcore
  args:
    - "-"
  stdin: "good $x$ then bad $\\frac$\n"
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
Conversion error: Error: Expected argument but reached end of input.
   ╭─[ <input>:1:6 ]
   │
 1 │ \frac
   │      │ 
   │      ╰─ expected an argument here
───╯
