crates/math-core-cli/tests/snapshots/cli__unclosed_delimiter.snap
---
source: crates/math-core-cli/tests/cli.rs
info:
  program: mathcore
  args:
    - "-"
  stdin: "unclosed $delim\n"
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
Conversion error: Unclosed delimiter on line 1, column 10.
